--- a/third.page.css
+++ b/third.page.css
@@ -16,6 +16,8 @@ h1{
 main img{
     height: 300px;
     margin-left:100px ;
+    margin-left: auto;
+    margin-right: auto;
 
     }
     main p{
@@ -54,9 +56,7 @@ main img{
              .bot{
                  font-size:25px ;
              }
-html{
-   height:1500px;
-   width:701px;
-}
+
+
              
 
