--- a/srart.page.css
+++ b/srart.page.css
@@ -18,6 +18,8 @@ main img{
     height: 250px;
     margin-left:100px ;
     margin-bottom: 35px;
+    margin-left: auto;
+    margin-right: auto;
 
     }
     main p{
@@ -54,7 +56,5 @@ main img{
                  margin-bottom: 20px;
              }
 
-html{
-   height:1500px;
-   width:700px;
-}
+
+
